--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+body{
+    overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sorting{
+    height: 100px;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid black;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sort1{
+    width: 50%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.sort2{
+    width: 50%;
+    text-align: end;
 }
-
-.App-link {
-  color: #61dafb;
+.sort3{
+    width: 50%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.select{
+    width: 20px;
+}
+.inc{
+    width: 150px;
+    height: 50px;
+    color: white;
+    background: #000;
+    border-radius: 8px;
 }
